add sorting and filtering to Borrows endpoints
